<resources>
	<string name="manage_permissions">Manage🕹️ permissions</string>
		<string name="these_permissions_are_needed_f">These permissions are needed for the app to work</string>
			<string name="display_over_other_apps">Display over other apps🔝</string>
				<string name="required_to_display_the_dock_">Required to display the Dock, you cannot start the service without this</string>
			<string name="accessibility_service">Accessibility service🦮</string>
				<string name="use_this_to_start_and_stop_the">Use this to start and stop the Dock. Requires the above permission</string>
			<string name="usage_stats">Usage stats📊</string>
				<string name="allows_to_show_recent_apps_on_">Allows to show recent apps on devices where Smart Dock can\'t be installed as a system app</string>
		<string name="these_permissions_are_needed_b">These permissions are needed by some features</string>
			<string name="device_administrator">Device administrator🕹️</string>
				<string name="used_to_lock_the_screen">Used to lock the screen</string>
			<string name="storage">Storage🖴</string>
				<string name="used_to_change_the_menu_icon_a">Used to change the menu icon and event sounds</string>
			<string name="location">Location📍</string>
				<string name="used_to_retrieve_wifi_info_on_">Used to retrieve 🛜WLAN info🛜 on Android 8+</string>
			<string name="notification_access">Notification access🔔</string>
				<string name="used_to_display_notifications">Used to display notifications</string>
			<string name="root_access">Root access👨‍💻</string>
				<string name="used_to_perform_some_keyboard_">Used to perform some keyboard shortcuts and other features</string>
			<string name="manage">Manage...🔧</string>
			<string name="grant">Grant🆗</string>
			<string name="granted">🆗Granted</string>
		<string name="appearance">Appearance🖌️</string>
		<string name="app_menu">App Menu📱</string>
		<string name="dock">Dock📏</string>
		<string name="desktop">Desktop🖥️</string>
		<string name="default_apps">Default apps🔝</string>
		<string name="keyboard">Keyboard⌨️</string>
		<string name="hot_corners">Hot Corners📐</string>
		<string name="notifications">Notifications🔔</string>
		<string name="sounds">Sounds🔊</string>
		<string name="advanced">Advanced🔬</string>
		<string name="help_and_about">Help and aboutℹ️</string>
			<string name="look_and_feel">🎨Look and feel👀</string>
				<string name="theme_title">Dock theme🖼️</string>
					<string name="theme_dialogTitle">Theme🎨</string>
					<string name="dark">Dark</string>
					<string name="black">Black</string>
					<string name="transparent">Transparent</string>
					<string name="material_u">Material You</string>
					<string name="custom">Custom</string>
				<string name="theme_main_color_title">Main color🖌️</string>
					<string name="theme_main_color_summary">Defines main color🖌️ for item backgrounds</string>
					<string name="presets">Presets</string>
					<string name="wallpaper">Wallpaper</string>
					<string name="transparency">Transparency</string>
					<string name="cancel">Cancel❌</string>
					<string name="ok">OK👌</string>
				<string name="icon_pack">Icon pack</string>
					<string name="select_icon_pack">Select icon pack</string>
					<string name="system">System⚙️</string>
				<string name="icon_shape_title">Icon Shape</string>
					<string name="icon_shape_dialogTitle">Icon Shape</string>
					<string name="circle">Circle🔵</string>
					<string name="squircle">Squircle🟦</string>
				<string name="icon_padding_title">Icon padding</string>
					<string name="icon_padding_summary">Defines the amount🚧 of whitespace between the icon and it\'s border</string>
				<string name="dock_square_title">Disable rounded corners for the dock</string>
				<string name="tint_indicators_title">Tint running indicators</string>
				<string name="custom_animation_title">App launch animation</string>
					<string name="custom_animation_dialogTitle">Animation</string>
					<string name="fade">Fade🪽</string>
					<string name="slide_up">Slide up⬆️</string>
					<string name="slide_left">Slide left⬅️</string>
					<string name="none">None❌</string>
			<string name="menu">Menu</string>
				<string name="menu_icon_uri_title">Select menu icon</string>
				<string name="restore_menu_icon_title">Restore default menu icon</string>
				<string name="enable_app_menu_title">Toggle App Menu ⌨️with modifier key</string>
				<string name="menu_key_title">Menu ⌨️modifier key</string>
					<string name="menu_key_dialogTitle">Menu ⌨️modifier key</string>
				<string name="app_menu_fullscreen_title">Open App Menu in full screen</string>
				<string name="app_menu_height_title">App menu ↕️height</string>
				<string name="app_menu_width_title">App menu ↔️width</string>
				<string name="num_columns_title">Number of columns</string>
				<string name="enable_power_menu_title">Use built-in 📴power menu</string>
					<string name="enable_power_menu_summary">Use a built-in 📴power menu instead of the system one</string>
			<string name="app_launch">App launch</string>
				<string name="launch_mode_title">Default 🪟app launch mode</string>
					<string name="launch_mode_dialogTitle">launch mode🪟</string>
					<string name="standard">Standard🗖</string>
					<string name="maximized">Maximized🖥️</string>
					<string name="portrait">Portrait📲</string>
					<string name="fullscreen">Fullscreen💻️</string>
				<string name="remember_launch_mode_title">Remember 🪟launch mode</string>
					<string name="remember_launch_mode_summary">Remember last 🪟launch mode used for every app</string>
				<string name="launch_games_fullscreen_title">Launch games🎮️ in full screen💻</string>
					<string name="launch_games_fullscreen_summary">Launch apps detected as games🎮️ in full screen💻 by default</string>
			<string name="fine_tune">Fine tune🔩</string>
				<string name="app_menu_x_title">App menu ➡️x translation</string>
				<string name="app_menu_y_title">App menu ⬇️y translation</string>
			<string name="navigation">Navigation🚢</string>
				<string name="enable_nav_back_title">Enable 🔙back button</string>
				<string name="enable_nav_home_title">Enable 🏠️home button</string>
				<string name="enable_nav_recents_title">Enable 📃recents button</string>
				<string name="enable_nav_assist_title">Enable 🎙️assistant button</string>
			<string name="quick_settings">Quick settings🎛️</string>
				<string name="enable_qs_bluetooth_title">Enable 🟦bluetooth button🦷</string>
				<string name="enable_qs_battery_title">Enable 🔋battery button</string>
				<string name="enable_qs_wifi_title">Enable 🛜WLAN button</string>
				<string name="enable_qs_vol_title">Enable 🔊volume button</string>
				<string name="enable_qs_date_title">Enable ⏰clock</string>
				<string name="enable_qs_pin_title">Enable 📌pin button</string>
					<string name="enable_qs_pin_summary">You can still pin/unpin📌 the Dock by long pressing it or using the keyboard shortcut⌨️</string>
				<string name="enable_wifi_panel_title">Enable 🛜WLAN panel</string>
					<string name="enable_wifi_panel_summary">Enables built-in 🛜WLAN panel. This requires 📍location access</string>
			<string name="behaviour">Behaviour🦾</string>
				<string name="pin_dock_title">Pin📌 the dock on startup</string>
					<string name="pin_dock_summary">Useful when working with other launchers</string>
				<string name="auto_pin_title">Auto pin📌</string>
					<string name="auto_pin_summary">Automatically pin📌 the Dock when switching to windowed apps</string>
				<string name="dock_hide_delay_title">Dock ⏳️hide delay in ms</string>
				<string name="running_apps_number_title">Number of running/recent apps to show</string>
					<string name="running_apps_number_summary">This setting can help devices with smaller screens avoid app overflow on the Dock</string>
				<string name="center_running_apps_title">Center running apps</string>
				<string name="dock_activation_area_title">Dock activation area</string>
			<string name="show_notes_title">Show notes widget📝</string>
			<string name="app_browser_title">Web browser🌐</string
				
					
			<string name="app_files_title">Files🗂️</string>
			<string name="app_music_title">Music🎵</string>
			<string name="app_movies_title">Movies🎬️</string>
			<string name="app_assistant_title">Assistant🎙️</string>
			<string name="app_clock_title">Clock⏰</string>
			<string name="app_terminal_title">Terminal#️</string>
			<string name="app_rec_title">Screen recorder📹️</string>
			<string name="shortcut_key_title">Shortcut modifier key⌨️</string>
				<string name="shortcut_key_dialogTitle">Shortcut modifier key⌨️</string>
				<string name="general">General</string>
					<string name="enable_lock_desktop_title">Enable Modifier+L 🔒️to lock the desktop(requires 🕹️Device Admin permission)</string>
					<string name="enable_take_screenshot_title">Enable Modifier+K ✃to take a screenshot</string>
					<string name="enable_open_settings_title">Enable Modifier+P ⚙️to open settings</string>
					<string name="enable_toggle_pin_title">Enable Modifier+W 📌to pin/unpin the dock</string>
					<string name="enable_expand_notifications_title">Enable Modifier+N 🔔to open notifications</string>
					<string name="enable_f10_title">Toggle 🪛split screen by pressing F10</string>
				<string name="apps">Apps</string>
					<string name="enable_open_music_title">Enable Modifier+M 🎵to open you default music app</string>
					<string name="enable_open_browser_title">Enable Modifier+B 🌐to open your default browser</string>
					<string name="enable_open_assist_title">Enable Modifier+A 🎙️to launch your default assistant app</string>
					<string name="enable_open_terminal_title">Enable Modifier+T #️to open terminal</string>
					<string name="enable_open_rec_title">Enable Modifier+R 📹️to launch your default screen recorder app</string>
					<string name="enable_menu_recents_title">Enable Menu key 📃to show recents</string>
					<string name="enable_ctrl_back_title">Enable right Ctrl 🔙to act as back button</string>
			<string name="enable_corner_top_right_title">Enable ↗️top right corner</string>
				<string name="enable_corner_top_right_summary">Place the mouse on the top right corner of the screen 📃to show recents</string>
			<string name="enable_corner_bottom_right_title">Enable ↘️bottom right corner</string>
			<string name="hot_corners_delay_title">Hot corners ⏳️activation delay in ms</string>
			<string name="app_name">Smart Dock💙</string>
				<string name="a_launcher_for_android_x86_by_">A launcher for Android x86 by Axel358🪛</string>
			<string name="help">Help🫱🏻‍🫲🏿</string>
					<string name="app_help">
						The application should be installed as a system app in order to obtain the right permissions.
						Without this functionallity will be limited.
						\n
						\nYou should also 🪄hide the 🚢Android navigation buttons. For more info on how to do this check the full help on GitHub
						\n
						\nThe app uses an accessibility service🦮 to capture keyboard input, if that service is crashed you might need to re-enable it and/or 🔄restart the system.
						\n
					</string>
				<string name="github">GitHub</string>
					<string name="smart_dock_its_free_and_open_">Smart Dock💙 it\'s free🆓 and open source📖. Contribute on GitHub🪪</string>
				<string name="join_telegram_title">📄✈️Telegram group🗫</string>
					<string name="join_telegram_summary">Got any questions⁉️ Join the Telegram 🗫support group🗨️</string>
				<string name="license">License📑</string>
					<string name="gnu_general_public_licence_v3">GNU General Public Licence v3.0</string>
				<string name="options_marked_with__are_expe">Options marked with * are experimental and may cause trouble. If you experience crashes disable them‼️</string>
		<string name="wifi">WLAN🛜</string>
		<string name="not_connected">Not connected</string>
		<string name="select_network">Select network</string>
		<string name="special_thanks_to">Special thanks to🎉</string>
		<string name="k_s_maan_nblisslabs_project">K S Maan \nBlissLabs project</string>
</resources>