<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:title="@string/app_name"
        android:summary="@string/a_launcher_for_android_x86_by_" />
    <Preference
        android:title="@string/special_thanks_to"
        android:summary="@string/k_s_maan_nblisslabs_project" />
    <Preference
        android:summary="@string/app_help"
        android:title="@string/help" >
        <intent android:action="android.intent.action.VIEW" 
            android:data="https://github.com/axel358/smartdock"/>
    </Preference>
    <Preference
        android:summary="@string/smart_dock_its_free_and_open_"
        android:title="@string/github" >
        <intent android:action="android.intent.action.VIEW" 
            android:data="https://github.com/axel358/smartdock"/>
    </Preference>
    <Preference
        android:key="join_telegram"
        android:title="@string/join_telegram_title"
        android:summary="@string/join_telegram_summary" />
    <Preference
        android:summary="@string/gnu_general_public_licence_v3"
        android:title="@string/license" />
    <Preference
        android:icon="@drawable/ic_about"
        android:title="@string/options_marked_with__are_expe"/>
</PreferenceScreen>
