<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/these_permissions_are_needed_f"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="17sp"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:src="@drawable/ic_overlay"
				android:layout_width="30dp"
				android:layout_height="30dp"/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginLeft="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/display_over_other_apps"
					android:textSize="16sp"
					android:textColor="#FF141414"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/required_to_display_the_dock_"/>

			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_height="wrap_content"
				android:text="@string/grant"
				android:id="@+id/btn_grant_overlay"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:src="@drawable/ic_manage_service"
				android:layout_width="30dp"
				android:layout_height="30dp"/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginLeft="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/accessibility_service"
					android:textSize="16sp"
					android:textColor="#FF141414"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/use_this_to_start_and_stop_the"/>

			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_height="wrap_content"
				android:text="@string/manage"
				android:id="@+id/btn_manage_service"/>

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/these_permissions_are_needed_b"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_marginTop="5dp"
			android:textSize="17sp"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:src="@drawable/ic_device_admin"
				android:layout_width="30dp"
				android:layout_height="30dp"/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginLeft="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/device_administrator"
					android:textSize="16sp"
					android:textColor="#FF141414"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/used_to_lock_the_screen"/>

			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_height="wrap_content"
				android:text="@string/grant"
				android:id="@+id/btn_grant_admin"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:src="@drawable/ic_folder"
				android:layout_width="30dp"
				android:layout_height="30dp"/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginLeft="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/storage"
					android:textSize="16sp"
					android:textColor="#FF141414"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/used_to_change_the_menu_icon_a"/>

			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_height="wrap_content"
				android:text="@string/grant"
				android:id="@+id/btn_grant_storage"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:src="@drawable/ic_notifications"
				android:layout_width="30dp"
				android:layout_height="30dp"/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginLeft="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/notification_access"
					android:textSize="16sp"
					android:textColor="#FF141414"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/used_to_display_notifications"/>

			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_height="wrap_content"
				android:text="@string/manage"
				android:id="@+id/btn_grant_notifications"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<ImageView
				android:src="@drawable/ic_root"
				android:layout_width="30dp"
				android:layout_height="30dp"/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginLeft="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/root_access"
					android:textSize="16sp"
					android:textColor="#FF141414"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/used_to_perform_some_keyboard_"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</ScrollView>

