<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/ic_info"
        android:title="@string/hot_corners_help"/>
    <cu.axel.smartdock.preferences.NavActionChooserPreference
        android:defaultValue="false"
        android:key="enable_corner_top_right"
        android:title="@string/enable_corner_top_right_title" />
    <cu.axel.smartdock.preferences.NavActionChooserPreference
        android:defaultValue="false"
        android:key="enable_corner_bottom_right"
        android:title="@string/enable_corner_bottom_right_title" />
    <EditTextPreference
        android:defaultValue="300"
        android:hint="300"
        android:key="hot_corners_delay"
        android:title="@string/hot_corners_delay_title" />
</PreferenceScreen>
