<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/round_rect"
	android:paddingStart="16dp"
	android:paddingEnd="16dp"
	android:paddingTop="16dp">

	<Switch
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/wifi"
		android:textSize="17sp"
		android:textColor="#FFFFFFFF"
		android:id="@+id/wp_switch"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		android:gravity="center_vertical"
		android:id="@+id/wp_info"
		android:visibility="gone">

		<ImageView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:src="@drawable/ic_wifi_on"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/not_connected"
			android:layout_marginStart="10dp"
			android:textColor="#FFFFFFFF"
			android:textSize="16sp"
			android:id="@+id/wp_ssid_tv"
			android:singleLine="true"/>

	</LinearLayout>

	<Button
		style="?android:attr/buttonBarButtonStyle"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select_network"
		android:textSize="14sp"
		android:id="@+id/wp_select_btn"/>

</LinearLayout>

